# util-bot

./: .env  .gitignore  Cargo.toml  GROUPS.md  LICENSE  README.md
migrations/2020-07-14-201754_model/: down.sql  up.sql
src/: main.rs  schema.rs
